# nixos-metrics

./: .gitignore  Cargo.toml  LICENSE  README.md  data-gtrends.json  data-netlify.json  data.json  flake.nix  gtrends.json  index.html  process.py  victoriametrics.jsonl
.github/: CODEOWNERS  dependabot.yml
.github/actions/nix-common-setup/: action.yml
.github/workflows/: ci.yml  daily.yml  gtrends.yml  netlify.yml  update-flake-lock.yml  victoriametrics_aggregate.yml
netlify/: 2022-05-03.json  2022-06-23.json  2022-06-24.json  2022-06-25.json  2022-06-26.json  2022-06-27.json  2022-06-28.json  2022-06-29.json  2022-06-30.json  2022-07-01.json  2022-07-02.json  2022-07-03.json  2022-07-04.json  2022-07-05.json  2022-07-06.json  2022-07-07.json  2022-07-08.json  2022-07-09.json  2022-07-10.json  2022-09-01.json  2022-09-02.json  2022-09-03.json  2022-09-04.json  2022-09-05.json  2022-09-06.json  2022-09-07.json  2022-09-08.json  2022-09-09.json  2022-09-10.json  2022-09-11.json  2022-09-12.json  2022-09-13.json  2022-09-14.json  2022-09-15.json  2022-09-16.json  2022-09-17.json  2022-09-18.json  2022-09-19.json  2022-09-20.json  2022-09-21.json  (+141 more)
src/: gtrends.rs  lib.rs  main.rs  netlify.rs  process.py  process.rs
src/gtrends/: process.rs
src/netlify/: process.rs
victoriametrics/: gtrends.jsonl  netlify.jsonl
