[package]
name = "nixos-metrics"
version = "0.1.0"
edition = "2021"
description = "NixOS metrics"
authors = [ "Rok Garbas <rok@garbas>" ]
documentation = "https://github.com/NixOS/nixos-metrics"
readme = "README.md"
homepage = "https://github.com/NixOS/nixos-metrics"
repository = "https://github.com/NixOS/nixos-metrics"
license = "MIT"
keywords = [ "nix", "nixos", "metrics" ]

[dependencies]
anyhow = "*"
chrono = { version = "*", features = ["serde"] }
clap = { version = "*", features = ["derive"] }
clap-verbosity-flag = "*"
futures = "*"
log = "*"
reqwest = { version = "*", features = ["json"] }
env_logger = "*"
tokio = { version = "*", features = ["full"] }
serde_json = "*"
serde = { version = "*", features = ["derive"] }

